--- a/IssueTracker/src/main/java/com/issuetracker/pages/CreateIssue.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/CreateIssue.html
@@ -24,13 +24,13 @@ and open the template in the editor.
                 
                 <tr>
                     <td width="200"> Select a project: </td>
-                    <td><select wicket:id="projectName"></select></td>
+                    <td><select wicket:id="projects"></select></td>
 
                 </tr>
 
                 <tr>
                     <td width="200">&nbsp;</td>
-                    <td><input type="submit" value="Search for issues"/></td>
+                    <td><input type="submit" value="Create Issue"/></td>
                 </tr>
             </table>
         </form>
