--- a/IssueTracker/src/main/java/com/issuetracker/pages/CreateIssue.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/CreateIssue.html
@@ -27,6 +27,18 @@ and open the template in the editor.
                     <td><select wicket:id="projects"></select></td>
 
                 </tr>
+                
+                <tr>
+                    <td width="200"> Select project type: </td>
+                    <td><select wicket:id="issueTypes"></select></td>
+
+                </tr>
+                
+                <tr>
+                    <td width="200"> Select components </td>
+                    <td><select wicket:id="components"></select></td>
+
+                </tr>
 
                 <tr>
                     <td width="200">&nbsp;</td>
