--- a/IssueTracker/src/main/java/com/issuetracker/pages/HomePage.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/HomePage.html
@@ -19,6 +19,7 @@ and open the template in the editor.
                 <td><span wicket:id="searchIssueLink">Search for issue</span></td>
                 <td><span wicket:id="createIssueLink">Create Issue</span></td>
                 <td><span wicket:id="createProjectLink">Create Project</span></td>
+                <td><span wicket:id="createIssueTypeLink">Create Project</span></td>
                 <td>  <form id="loginForm" method="get" wicket:id="loginForm">
                         <fieldset>
                             <legend style="color: #F90">Login</legend>
