--- a/IssueTracker/src/main/java/com/issuetracker/pages/HomePage.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/HomePage.html
@@ -43,8 +43,8 @@ and open the template in the editor.
 
         </table>
 
-        List of persons <select wicket:id="persons"></select> <br/>
-        <br/>
+        <!--List of persons <select wicket:id="persons"></select> <br/>-->
+<!--        <br/>
         <form wicket:id="form">
             <div style="display: table;">
                 <div style="display: table-row;">
@@ -73,7 +73,7 @@ and open the template in the editor.
                 </div>
             </div>
             <input type="submit" value="Save"/>
-        </form>
+        </form>-->
 
 
 
