--- a/IssueTracker/src/main/java/com/issuetracker/pages/register/RegisterReq.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/register/RegisterReq.html
@@ -18,32 +18,32 @@ and open the template in the editor.
             <table border="0" cellpadding="5">
                 <tr>
                     <td width="200">Name</td>
-                    <td><input type="text" wicket:id="name" size="30"/></td>
+                    <td><input type="text" wicket:id="firstName" size="30" value="Monika"/></td>
                 </tr>
                 <tr>
                     <td width="200">Last Name</td>
-                    <td><input type="text" wicket:id="lastName" size="30"/></td>
+                    <td><input type="text" wicket:id="lastName" size="30" value="Monikova"/></td>
                 </tr>
                 <tr>
                     <td width="200">Email</td>
-                    <td><input type="text" wicket:id="email" size="30"/></td>
+                    <td><input type="text" wicket:id="email" size="30" value="monca@seznam.cz"/></td>
                 </tr>
                 <tr>
                     <td width="200">Username</td>
-                    <td><input type="text" wicket:id="username" size="30"/></td>
+                    <td><input type="text" wicket:id="userName" size="30" value="monca"/></td>
                 </tr>
                 <tr>
                     <td width="200">Password</td>
-                    <td><input type="password" wicket:id="password" size="30"/></td>
+                    <td><input type="password" wicket:id="password" size="30" value="ahoj"/></td>
                 </tr>
                 <tr>
-                    <td width="200">Password</td>
-                    <td><input type="password" wicket:id=confirmPassword" size="30"/></td>
+                    <td width="200">Confirm Password</td>
+                    <td><input type="password" wicket:id="confirmPassword" size="30" value="ahoj"/></td>
                 </tr>
 
                 <tr>
                     <td width="200">&nbsp;</td>
-                    <td><input type="submit" value="Register"/></td>
+                    <td><input type="submit" value="Register PICKETBOX"/></td>
                 </tr>
             </table>
         </form>
