--- a/IssueTracker/src/main/java/com/issuetracker/pages/HomePage.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/HomePage.html
@@ -43,7 +43,7 @@ and open the template in the editor.
 
         </table>
 
-        List of persons <select wicket:id="persons"></select> <br/>
+<!--        List of persons <select wicket:id="persons"></select> <br/>
         <br/>
         <form wicket:id="form">
             <div style="display: table;">
@@ -73,7 +73,7 @@ and open the template in the editor.
                 </div>
             </div>
             <input type="submit" value="Save"/>
-        </form>
+        </form>-->
 
 
 
