--- a/IssueTracker/src/main/java/com/issuetracker/pages/ForgotPassword.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/ForgotPassword.html
@@ -9,6 +9,19 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>TODO write content</div>
+        <form method="post" action="#" wicket:id="sendPasswordForm">
+            <table border="0" cellpadding="5">
+                <tr>
+                    <td width="200">Email</td>
+                    <td><input type="text" wicket:id="email" size="30"/></td>
+                </tr>              
+                <tr>
+                    <td width="200">&nbsp;</td>
+                    <td><input type="submit" value="Send New Password"/></td>
+                </tr>
+            </table>
+        </form>
+        <span wicket:id="feedback"></span>
+        
     </body>
 </html>
