--- a/IssueTracker/src/main/java/com/issuetracker/pages/CreateProject.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/CreateProject.html
@@ -16,7 +16,11 @@ and open the template in the editor.
                     <td width="200">Name</td>
                     <td><input type="text" wicket:id="name" size="30"/></td>
                 </tr>
-
+                <tr>
+                    <td width="200">Project Version</td>
+                    <td><input type="text" wicket:id="projectVersion" size="30"/>
+                    <input wicket:id="button" type="submit" value="+" /></td>
+                </tr>
                 <tr>
                     <td width="200">&nbsp;</td>
                     <td><input type="submit" value="Add Project"/></td>
@@ -24,5 +28,5 @@ and open the template in the editor.
             </table>
         </form>
     </wicket:extend>
-    </body>
+</body>
 </html>
