--- a/IssueTracker/src/main/java/com/issuetracker/pages/Register.html
+++ b/IssueTracker/src/main/java/com/issuetracker/pages/Register.html
@@ -38,7 +38,7 @@ and open the template in the editor.
                 </tr>
                 <tr>
                     <td width="200">Password</td>
-                    <td><input type="password" wicket:id=confirmPassword" size="30"/></td>
+                    <td><input type="password" wicket:id="confirmPassword" size="30"/></td>
                 </tr>
 
                 <tr>
