--- a/src/main/java/com/issuetracker/pages/CreateProject.html
+++ b/src/main/java/com/issuetracker/pages/CreateProject.html
@@ -17,16 +17,76 @@ and open the template in the editor.
                     <td><input type="text" wicket:id="name" size="30"/></td>
                 </tr>
                 <tr>
-                    <td width="200">Project Version</td>
-                    <td><input type="text" wicket:id="projectVersion" size="30"/>
-                    <input wicket:id="button" type="submit" value="+" /></td>
+                    <td width="200">Version</td>
+                    <td><input type="text" wicket:id="version" size="30"/><input wicket:id="evalButton" type="submit" value="+"></td>
                 </tr>
+                <tr>
+                    <td width="200">Component</td>
+                    <td><input type="text" wicket:id="componentName" size="30"/><input wicket:id="addComponentButton" type="submit" value="+"></td>
+                </tr>
+                <!--<tr>-->
+                <!--                    <td width="200">Version</td>
+                
+                                    <td><input type="text" wicket:id="projectVersion" size="30"/><button  wicket:id="addVersionButton" >+</button></td>
+                                </tr>
+                                <tr>
+                                    <td><input wicket:id="textField" type="text"/>
+                                        <input wicket:id="evalButton" type="submit" value="evaluate" /></td>
+                                </tr>-->
+
                 <tr>
                     <td width="200">&nbsp;</td>
                     <td><input type="submit" value="Add Project"/></td>
                 </tr>
             </table>
         </form>
+        <!--<button type="input" wicket:id="lookup">+</button>-->
+        <!--        <p>
+                    Result: <span wicket:id="evalResultLabel">result</span>
+                </p>-->
+
+        <div wicket:id="wmc">
+            <table border="1" cellpadding="8">
+                <tr>
+                    <td width="200">Name</td>
+                    <td width="200">&nbsp;</td>
+                </tr>
+                <tr wicket:id="versionsList">
+                    <td><span wicket:id="name"></span></td>
+
+                    <td><a href="#" wicket:id="remove">[delete]</a></td>
+                </tr>
+            </table>
+        </div>
+
+        <div wicket:id="wmcComponent">
+            <table border="1" cellpadding="8">
+                <tr>
+                    <td width="200">Name</td>
+                    <td width="200">&nbsp;</td>
+                </tr>
+                <tr wicket:id="componentsList">
+                    <td><span wicket:id="name"></span></td>
+
+                    <td><a href="#" wicket:id="remove">[delete]</a></td>
+                </tr>
+            </table>
+        </div>
+
+
+
+        <table border="1" cellpadding="8">
+            <tr>
+                <td width="200">Name</td>
+                <td width="200">&nbsp;</td>
+            </tr>
+            <tr wicket:id="projectList">
+                <td><span wicket:id="name"></span></td>
+                <td><a href="#" wicket:id="delete">[delete]</a></td>
+            </tr>
+        </table>
+
+
     </wicket:extend>
 </body>
 </html>
