updated structure/ search issue

--- a/src/main/java/com/issuetracker/pages/ForgotPassword.html
+++ b/src/main/java/com/issuetracker/pages/ForgotPassword.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
+    <wicket:extend>
         <form method="post" action="#" wicket:id="sendPasswordForm">
             <table border="0" cellpadding="5">
                 <tr>
@@ -22,6 +23,6 @@ and open the template in the editor.
             </table>
         </form>
         <span wicket:id="feedback"></span>
-        
-    </body>
+    </wicket:extend>
+</body>
 </html>
