--- a/src/main/java/com/issuetracker/pages/ShowIssue.html
+++ b/src/main/java/com/issuetracker/pages/ShowIssue.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <h3><span wicket:id="name"></span></h3>
          <div style="display: table;">
                 <div style="display: table-row;">
-                    <div style="display: table-cell;">Surname: </div>
+                    <div style="display: table-cell;">Description: </div>
                     <div style="display: table-cell;">
                         <input type="text" wicket:id="description"/>
                     </div>
@@ -24,6 +24,7 @@ and open the template in the editor.
                         <input type="text" wicket:id="project.name"/>
                     </div>
                 </div>
+             <span wicket:id="component.name"></span>
             </div>
     </wicket:extend>
     </body>
