components / entities / models

--- a/src/main/java/com/issuetracker/pages/IssueDetail.html
+++ b/src/main/java/com/issuetracker/pages/IssueDetail.html
@@ -34,7 +34,9 @@ and open the template in the editor.
 
 
         <div wicket:id="modal2"></div><br/>
-        <a wicket:id="showModal2">Show modal dialog with panel</a>
+        <a wicket:id="showModal2">Show watchers</a>
+        <div wicket:id="commentListView"/>
+        <div wicket:id="commentForm"/>
     </wicket:extend>
 </body>
 </html>
