comments / stream / status

--- a/src/main/java/com/issuetracker/pages/CreateIssue.html
+++ b/src/main/java/com/issuetracker/pages/CreateIssue.html
@@ -18,6 +18,7 @@ and open the template in the editor.
             <select wicket:id="makes"></select>
             <select wicket:id="models"></select>
             <select wicket:id="versionModels"></select>
+            <select wicket:id="priorityDropDown"></select>
             <input type="file" wicket:id="fileUploadField" value="Attach File"/>
 
             <input type="submit" value="Create Issue"/>
@@ -40,6 +41,7 @@ and open the template in the editor.
                 <td><span wicket:id="component"></span></td>
                 <td><span wicket:id="version"></span></td>
                 <td><span wicket:id="project"></span></td>
+                <!--<td><span wicket:id="project"></span></td>-->
                 <td><span wicket:id="file"></span></td>
 
             </tr>
