--- a/src/main/java/com/issuetracker/pages/IssueDetail.html
+++ b/src/main/java/com/issuetracker/pages/IssueDetail.html
@@ -10,24 +10,35 @@ and open the template in the editor.
     </head>
     <body>
     <wicket:extend>
-        <h3><span wicket:id="name"></span></h3>
-        <div style="display: table;">
-            <div style="display: table-row;">
-                <div style="display: table-cell;">Description: </div>
-                <div style="display: table-cell;">
-                    <input type="text" wicket:id="description"/>
-                </div>
-            </div>
-            <div style="display: table-row;">
-                <div style="display: table-cell;">Username </div>
-                <div style="display: table-cell;">
-                    <input type="text" wicket:id="project.name"/>
-                </div>
-            </div>
-            Component:
-            <span wicket:id="component.name"></span> <br/>
-            Watchers:
-            <span wicket:id="watchersCountLabel">x</span> 
+        <a wicket:id="link"><span wicket:id="project"></span></a>
+
+
+        <h2><span wicket:id="name"></span></h2>
+
+
+        <span wicket:id="description"></span><br/>
+        <br/>
+
+        Details:<br/>
+
+        Type: <span wicket:id="type"></span><br/>
+        Affects versions: <span wicket:id="affectsVersions"></span><br/>
+        <div>
+            <!--            <div style="display: table-row;">
+                            <div style="display: table-cell;">Description: </div>
+                            <div style="display: table-cell;">
+                                <input type="text" wicket:id="description"/>
+                            </div>
+                        </div>
+                        <div style="display: table-row;">
+                            <div style="display: table-cell;">Username </div>
+                            <div style="display: table-cell;">
+                                <input type="text" wicket:id="project.name"/>
+                            </div>
+                        </div>-->
+            Component: <span wicket:id="componentName"></span> <br/>
+            Priority: <span wicket:id="priority"></span> <br/>
+            Watchers: <span wicket:id="watchersCountLabel">x</span> 
             <a wicket:id="addWatcherLink">Watch this issue</a>
 
         </div>
@@ -35,6 +46,9 @@ and open the template in the editor.
 
         <div wicket:id="modal2"></div><br/>
         <a wicket:id="showModal2">Show watchers</a>
+
+        <div wicket:id="setIssueStateForm"/>
+
         <div wicket:id="commentListView"/>
         <div wicket:id="commentForm"/>
     </wicket:extend>
