--- a/src/main/java/com/issuetracker/pages/CreateProject.html
+++ b/src/main/java/com/issuetracker/pages/CreateProject.html
@@ -10,7 +10,7 @@ and open the template in the editor.
     </head>
     <body>
     <wicket:extend>
-
+        <div wicket:id="feedbackPanel"></div>
         <form method="post" action="#" wicket:id="insertProjectForm">
             <table border="0" cellpadding="5">
                 <tr>
@@ -47,7 +47,7 @@ and open the template in the editor.
 
         <span wicket:id="projectName"/>
         <div wicket:id="projectList"/>
-        
+
     </wicket:extend>
 </body>
 </html>
