--- a/src/main/java/com/issuetracker/pages/CreateStatuses.html
+++ b/src/main/java/com/issuetracker/pages/CreateStatuses.html
@@ -10,6 +10,7 @@ and open the template in the editor.
     </head>
     <body>
     <wicket:extend>
+        <div wicket:id="feedbackPanel"></div>
         <form method="post" action="#" wicket:id="insertStatusForm">
             <table border="0" cellpadding="5">
                 <tr>
