--- a/src/main/java/com/issuetracker/pages/SearchIssues.html
+++ b/src/main/java/com/issuetracker/pages/SearchIssues.html
@@ -10,6 +10,8 @@ and open the template in the editor.
     </head>
     <body>
     <wicket:extend>
+        <div wicket:id="feedbackPanel"></div>
+
         <form wicket:id="searchIssuesForm">
             <input type="text" wicket:id="containsText" />
             <select wicket:id="projectDropDownChoice"></select>
@@ -35,7 +37,7 @@ and open the template in the editor.
 
             </tr>
         </table>
-       
+
 
 
     </wicket:extend>
