--- a/src/main/java/com/issuetracker/pages/AddTransition.html
+++ b/src/main/java/com/issuetracker/pages/AddTransition.html
@@ -11,11 +11,12 @@ and open the template in the editor.
     <body>
     <wicket:extend>
         <h3><span wicket:id="workflowName"/></h3><br/>
+         <div wicket:id="feedbackPanel"></div>
         <span wicket:id="statusName"/>
         <form method="post" action="#" wicket:id="addTransitionForm">
             <table border="0" cellpadding="5">
                 <tr>
-                    <td width="200">Name</td>
+                    <td width="200">Insert Transition Name:</td>
                     <td><input type="text" wicket:id="transitionName" size="30"/></td>
                     <td><select wicket:id="statuses"></select></td>
                 </tr>
