issue search, createIssue properties

--- a/src/main/java/com/issuetracker/pages/SearchIssues.html
+++ b/src/main/java/com/issuetracker/pages/SearchIssues.html
@@ -16,7 +16,8 @@ and open the template in the editor.
             <input type="text" wicket:id="containsText" />
             <select wicket:id="projectDropDownChoice"></select>
             <select wicket:id="versionDropDownChoice"></select>
-            <select wicket:id="componentsListMultiple"></select>
+            <select wicket:id="componentsDropDownChoice"></select>
+            <select wicket:id="statusLMC"></select>
             <select wicket:id="issueTypes"></select>
 
             <input type="submit" value="Search"/>
