--- a/src/main/java/com/issuetracker/pages/PageLayout.html
+++ b/src/main/java/com/issuetracker/pages/PageLayout.html
@@ -3,12 +3,14 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="default.css"/>
     </head>
     <body>
         <div id="header" wicket:id="headerPanel">header</div>
         <div id="body">
            
             <wicket:child/>
+            
         </div>
         <div id="footer" wicket:id="footerPanel">footer</div>
     </body>
