custom field - set value

--- a/src/main/java/com/issuetracker/pages/createIssue/CreateIssue.html
+++ b/src/main/java/com/issuetracker/pages/createIssue/CreateIssue.html
@@ -19,7 +19,7 @@ and open the template in the editor.
             <select wicket:id="versionsDropDown"></select>
             <select wicket:id="priorityDropDown"></select>
             <input type="file" wicket:id="fileUploadField" value="Attach File"/>
-
+            <div wicket:id="cfListView"/>
             <input type="submit" value="Create Issue"/>
         </form>
         <div wicket:id="feedbackPanel"></div>
