--- a/src/main/java/com/issuetracker/pages/ProjectDetail.html
+++ b/src/main/java/com/issuetracker/pages/ProjectDetail.html
@@ -34,6 +34,13 @@ and open the template in the editor.
                 <td><a href="#" wicket:id="remove">[delete]</a></td>
             </tr>
         </table>
+        <div wicket:id="cfListView"/>
+        <span wicket:id="cfHeader"></span>
+        <form wicket:id="form">
+            <input type="text" wicket:id="cfName" />
+
+            <input type="submit" value="Done"/>
+        </form>
     </wicket:extend>
 </body>
 </html>
