--- a/src/main/java/com/issuetracker/pages/createIssue/CreateIssueCustomFIeldsListView.html
+++ b/src/main/java/com/issuetracker/pages/createIssue/CreateIssueCustomFIeldsListView.html
@@ -10,10 +10,11 @@ and open the template in the editor.
     </head>
     <body>
     <wicket:panel>
-        <table cellpadding="8">
-            <tr wicket:id="customFields">
-                <td><span wicket:id="name"></span></td>
-                <td><a href="#" wicket:id="delete">[x]</a></td>
+        <table cellpadding="0">
+
+            <tr wicket:id="fields">
+                <td><span wicket:id="name"/></td>
+                <td><input type="text" wicket:id="customTextField"/></td>
             </tr>
         </table>
     </wicket:panel>
