--- a/src/main/java/com/issuetracker/pages/createIssue/CreateIssue.html
+++ b/src/main/java/com/issuetracker/pages/createIssue/CreateIssue.html
@@ -12,7 +12,8 @@ and open the template in the editor.
     <wicket:extend>
         <form wicket:id="form">
             <input type="text" wicket:id="issueName" />
-            <input type="text" wicket:id="issueDescription" />
+            <input type="text" wicket:id="issueSummary" />
+            <textarea wicket:id="description" rows="6" cols="40"></textarea>
             <select wicket:id="issueTypes"></select>
             <select wicket:id="projectDropDown"></select>
             <select wicket:id="componentDropDown"></select>
