--- a/src/main/java/com/issuetracker/pages/IssueDetail.html
+++ b/src/main/java/com/issuetracker/pages/IssueDetail.html
@@ -8,6 +8,7 @@
     <wicket:extend>
         <a wicket:id="link"><span wicket:id="project"></span></a>
         <h2><span wicket:id="name"></span></h2>
+        <span wicket:id="summary"></span><br/>
         <span wicket:id="description"></span><br/>
         <br/>
 
