login link components

--- a/src/main/java/com/issuetracker/pages/Login.html
+++ b/src/main/java/com/issuetracker/pages/Login.html
@@ -9,15 +9,15 @@
 
 <body>
 <wicket:extend>
-    <section class="login">
-        <div class="titulo">Welcome to Issue tracking</div>
-<div wicket:id = "loginForm"></div>
 
-        <a wicket:id = "forgotPasswordLink">Forgot Password?</a> 
-    </section>
+    <div wicket:id = "loginForm"></div>
+
+    <div wicket:id = "forgotPasswordLink"></div>
+
     <span wicket:id="feedback"></span>
 
-    <a wicket:id = "signUpLink">Need New Account? Sign Up!</a>    
+    <div wicket:id = "signUpLink"></div>
+    <!--<a wicket:id = "signUpLink">Need New Account? Sign Up!</a>-->    
 
 </wicket:extend>
 </body>
