--- a/src/main/java/com/issuetracker/pages/createIssue/CreateIssue.html
+++ b/src/main/java/com/issuetracker/pages/createIssue/CreateIssue.html
@@ -11,7 +11,9 @@ and open the template in the editor.
     <body>
     <wicket:extend>
         <form wicket:id="form">
+            Name:
             <input type="text" wicket:id="issueName" />
+            Summary:
             <input type="text" wicket:id="issueSummary" />
             <textarea wicket:id="description" rows="6" cols="40"></textarea>
             <select wicket:id="issueTypes"></select>
