Added dates (creation and update) to issue and comment

--- a/src/main/java/com/issuetracker/pages/IssueDetail.html
+++ b/src/main/java/com/issuetracker/pages/IssueDetail.html
@@ -19,6 +19,8 @@
         <div>
             Component: <span wicket:id="componentName"></span> <br/>
             Priority: <span wicket:id="priority"></span> <br/>
+            Created: <span wicket:id="created"></span> <br/>
+            Updated: <span wicket:id="updated"></span> <br/>
             Watchers: <span wicket:id="watchersCountLabel">x</span> 
             <a wicket:id="addWatcherLink">Watch this issue</a>
 
