Showing of search results added

--- a/src/main/java/com/issuetracker/pages/fulltext/FulltextSearch.html
+++ b/src/main/java/com/issuetracker/pages/fulltext/FulltextSearch.html
@@ -38,6 +38,16 @@
                     </tr>
                 </table>
             </form>
+
+            <hr />
+
+            <div id="result">
+                <div wicket:id="issues">
+                    <a href="#" wicket:id="showIssue"><h2 wicket:id="issue.name"></h2></a>
+
+                    <p wicket:id="issue.description"></p>
+                </div>
+            </div>
         </div>
     </wicket:extend>
 </body>
